[gd_scene load_steps=12 format=4 uid="uid://ctnvk210kj2rc"]

[ext_resource type="Script" uid="uid://cnnr1f50qal2w" path="res://Scripts/room.gd" id="1_11dti"]
[ext_resource type="Texture2D" uid="uid://divmryxvl32mh" path="res://Sprites/Tiles.png" id="1_k60f5"]
[ext_resource type="Script" uid="uid://orgx7qv3hy3p" path="res://Scripts/room_entrance.gd" id="2_sbyl2"]
[ext_resource type="TileSet" uid="uid://dq15a70snukbx" path="res://room_tiles.tres" id="4_s3j8h"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_3mqfk"]
texture = ExtResource("1_k60f5")
margins = Vector2i(1, 1)
separation = Vector2i(2, 2)
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0

[sub_resource type="TileSet" id="TileSet_iixi8"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_3mqfk")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4dpyx"]
texture = ExtResource("1_k60f5")
margins = Vector2i(1, 1)
separation = Vector2i(2, 2)
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:0/0 = 0
5:1/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0
6:1/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:4/0 = 0
7:5/0 = 0
7:6/0 = 0
7:7/0 = 0
6:7/0 = 0
6:6/0 = 0
5:6/0 = 0
5:5/0 = 0
5:4/0 = 0
6:4/0 = 0
6:5/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
6:11/0 = 0
7:11/0 = 0
7:10/0 = 0
7:9/0 = 0
7:8/0 = 0
6:8/0 = 0
5:8/0 = 0
4:8/0 = 0
3:8/0 = 0
2:8/0 = 0
1:9/0 = 0
0:9/0 = 0
0:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
2:10/0 = 0
1:10/0 = 0
3:10/0 = 0
5:9/0 = 0
6:9/0 = 0

[sub_resource type="TileSet" id="TileSet_3mqfk"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_4dpyx")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iixi8"]
size = Vector2(16, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_cyadu"]
radius = 5.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgxfi"]
size = Vector2(16, 8)

[node name="Room_Template" type="StaticBody2D"]
script = ExtResource("1_11dti")

[node name="Base" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD4/wkAAAAGAAcAAAD5/wkAAAAGAAcAAAD6/wkAAAAGAAcAAAD7/wkAAAAGAAcAAAD8/wkAAAAGAAcAAAD9/wkAAAAGAAcAAAACAAkAAAAGAAcAAAADAAkAAAAGAAcAAAAEAAkAAAAGAAcAAAAFAAkAAAAGAAcAAAAGAAkAAAAGAAcAAAAHAAkAAAAGAAcAAAD9//r/AAAGAAcAAAD8//r/AAAGAAcAAAD7//r/AAAGAAcAAAD6//r/AAAGAAcAAAD5//r/AAAGAAcAAAD4//r/AAAGAAcAAAACAPr/AAAGAAcAAAADAPr/AAAGAAcAAAAEAPr/AAAGAAcAAAAFAPr/AAAGAAcAAAAGAPr/AAAGAAcAAAAHAPr/AAAGAAcAAAD+/wkAAAAHAAcAAAABAAkAAAAHAAcAAAD+//r/AAAHAAcAAAABAPr/AAAHAAcAAAAIAAkAAAAHAAsAAFD3/wkAAAAHAAsAADD3//r/AAAHAAsAAGAIAPr/AAAHAAsAAAD3//v/AAAGAAcAAFD3//z/AAAGAAcAAFD3//3/AAAGAAcAAFD3//7/AAAGAAcAAFD3////AAAGAAcAAFD3/wgAAAAGAAcAAFD3/wcAAAAGAAcAAFD3/wYAAAAGAAcAAFD3/wUAAAAGAAcAAFD3/wQAAAAGAAcAAFAIAPv/AAAGAAcAAFAIAPz/AAAGAAcAAFAIAP3/AAAGAAcAAFAIAP7/AAAGAAcAAFAIAP//AAAGAAcAAFAIAAgAAAAGAAcAAFAIAAcAAAAGAAcAAFAIAAYAAAAGAAcAAFAIAAUAAAAGAAcAAFAIAAQAAAAGAAcAAFD3/wAAAAAHAAcAAFD3/wMAAAAHAAcAAFAIAAAAAAAHAAcAAFAIAAMAAAAHAAcAAFA=")
tile_set = SubResource("TileSet_iixi8")

[node name="WallCollider" type="CollisionPolygon2D" parent="."]
position = Vector2(1, 17)
polygon = PackedVector2Array(-9, -65, -65, -65, -73, -59, -73, -9, -65, -9, -65, -57, -9, -57)

[node name="WallCollider2" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, 15)
rotation = 3.1413674
polygon = PackedVector2Array(-9, -65, -65, -65, -73, -59, -73, -9, -65, -9, -65, -57, -9, -57)

[node name="WallCollider3" type="CollisionPolygon2D" parent="."]
position = Vector2(1, 17)
polygon = PackedVector2Array(-73, 7, -73, 55, -67, 63, -9, 63, -9, 55, -65, 55, -65, 7)

[node name="WallCollider4" type="CollisionPolygon2D" parent="."]
position = Vector2(-1, 15)
rotation = 3.1415927
polygon = PackedVector2Array(-73, 7, -73, 55, -67, 63, -40.862305, 63.000015, -9, 63, -9, 55, -65, 55, -65, 7)

[node name="Entrance_North" type="Node2D" parent="."]
script = ExtResource("2_sbyl2")

[node name="Door" type="Node2D" parent="Entrance_North"]

[node name="Tunnel" type="TileMapLayer" parent="Entrance_North/Door"]
tile_map_data = PackedByteArray("AAD+//n/AAAGAAcAAGD+//j/AAAGAAcAAGABAPj/AAAGAAcAAGABAPn/AAAGAAcAAGA=")
tile_set = SubResource("TileSet_3mqfk")

[node name="Door_Shut" type="StaticBody2D" parent="Entrance_North/Door"]

[node name="DoorSprite" type="Sprite2D" parent="Entrance_North/Door/Door_Shut"]
position = Vector2(0, -44)
scale = Vector2(2, 1)
texture = ExtResource("1_k60f5")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_North/Door/Door_Shut"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="Entrance_North"]
collision_mask = 2
position = Vector2(0, -56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_North/ExitTrigger"]
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="Entrance_North"]
position = Vector2(0, -33)

[node name="Barrier" type="StaticBody2D" parent="Entrance_North"]

[node name="TileMapLayer" type="TileMapLayer" parent="Entrance_North/Barrier"]
tile_map_data = PackedByteArray("AAD///r/AAAGAAcAAAAAAPr/AAAGAAcAAAA=")
tile_set = ExtResource("4_s3j8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_North/Barrier"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_xgxfi")

[node name="Entrance_West" type="Node2D" parent="."]
position = Vector2(-24, 16)
rotation = -1.5707964
script = ExtResource("2_sbyl2")
direction = 3

[node name="Door" type="Node2D" parent="Entrance_West"]

[node name="Tunnel" type="TileMapLayer" parent="Entrance_West/Door"]
tile_map_data = PackedByteArray("AAD+//n/AAAGAAcAAGD+//j/AAAGAAcAAGABAPj/AAAGAAcAAGABAPn/AAAGAAcAAGA=")
tile_set = SubResource("TileSet_3mqfk")

[node name="Door_Shut" type="StaticBody2D" parent="Entrance_West/Door"]

[node name="DoorSprite" type="Sprite2D" parent="Entrance_West/Door/Door_Shut"]
position = Vector2(0, -44)
scale = Vector2(2, 1)
texture = ExtResource("1_k60f5")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_West/Door/Door_Shut"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="Entrance_West"]
collision_mask = 2
position = Vector2(0, -56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_West/ExitTrigger"]
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="Entrance_West"]
position = Vector2(0, -33)

[node name="Barrier" type="StaticBody2D" parent="Entrance_West"]

[node name="TileMapLayer" type="TileMapLayer" parent="Entrance_West/Barrier"]
tile_map_data = PackedByteArray("AAD///r/AAAGAAcAAAAAAPr/AAAGAAcAAAA=")
tile_set = ExtResource("4_s3j8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_West/Barrier"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_xgxfi")

[node name="Entrance_South" type="Node2D" parent="."]
position = Vector2(0, 32)
rotation = 3.1415927
script = ExtResource("2_sbyl2")
direction = 1

[node name="Door" type="Node2D" parent="Entrance_South"]

[node name="Tunnel" type="TileMapLayer" parent="Entrance_South/Door"]
tile_map_data = PackedByteArray("AAD+//n/AAAGAAcAAGD+//j/AAAGAAcAAGABAPj/AAAGAAcAAGABAPn/AAAGAAcAAGA=")
tile_set = SubResource("TileSet_3mqfk")

[node name="Door_Shut" type="StaticBody2D" parent="Entrance_South/Door"]

[node name="DoorSprite" type="Sprite2D" parent="Entrance_South/Door/Door_Shut"]
position = Vector2(0, -44)
scale = Vector2(2, 1)
texture = ExtResource("1_k60f5")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_South/Door/Door_Shut"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="Entrance_South"]
collision_mask = 2
position = Vector2(0, -56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_South/ExitTrigger"]
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="Entrance_South"]
position = Vector2(0, -33)

[node name="Barrier" type="StaticBody2D" parent="Entrance_South"]

[node name="TileMapLayer" type="TileMapLayer" parent="Entrance_South/Barrier"]
tile_map_data = PackedByteArray("AAD///r/AAAGAAcAAAAAAPr/AAAGAAcAAAA=")
tile_set = ExtResource("4_s3j8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_South/Barrier"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_xgxfi")

[node name="Entrance_East" type="Node2D" parent="."]
position = Vector2(24, 16)
rotation = 1.5707964
script = ExtResource("2_sbyl2")
direction = 2

[node name="Door" type="Node2D" parent="Entrance_East"]

[node name="Tunnel" type="TileMapLayer" parent="Entrance_East/Door"]
tile_map_data = PackedByteArray("AAD+//n/AAAGAAcAAGD+//j/AAAGAAcAAGABAPj/AAAGAAcAAGABAPn/AAAGAAcAAGA=")
tile_set = SubResource("TileSet_3mqfk")

[node name="Door_Shut" type="StaticBody2D" parent="Entrance_East/Door"]

[node name="DoorSprite" type="Sprite2D" parent="Entrance_East/Door/Door_Shut"]
position = Vector2(0, -44)
scale = Vector2(2, 1)
texture = ExtResource("1_k60f5")
region_enabled = true
region_rect = Rect2(11, 31, 8, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_East/Door/Door_Shut"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_iixi8")

[node name="ExitTrigger" type="Area2D" parent="Entrance_East"]
collision_mask = 2
position = Vector2(0, -56)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_East/ExitTrigger"]
shape = SubResource("CircleShape2D_cyadu")

[node name="PlayerSpawn" type="Node2D" parent="Entrance_East"]
position = Vector2(0, -33)

[node name="Barrier" type="StaticBody2D" parent="Entrance_East"]

[node name="TileMapLayer" type="TileMapLayer" parent="Entrance_East/Barrier"]
tile_map_data = PackedByteArray("AAD///r/AAAGAAcAAAAAAPr/AAAGAAcAAAA=")
tile_set = ExtResource("4_s3j8h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Entrance_East/Barrier"]
position = Vector2(0, -44)
shape = SubResource("RectangleShape2D_xgxfi")
